[tool.poetry]
name = "pdf-text-adder-py"
version = "0.1.0"
description = ""
authors = ["nukopy <nukopy@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pypdf2 = "^2.12.1"
reportlab = "^3.6.12"
click = "^8.1.3"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
flake8 = "^6.0.0"
mypy = "^0.991"
pytest = "^7.2.0"
ipython = "^8.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
